# ompi-1

config/: opal_configure_options.m4
examples/: ring_c.c
ompi/: Makefile.am
ompi/attribute/: attribute.c  attribute.h
ompi/communicator/: comm.c  comm_cid.c  comm_init.c  comm_request.c  communicator.h
ompi/datatype/: ompi_datatype.h  ompi_datatype_module.c
ompi/debuggers/: ompi_common_dll.c  ompi_msgq_dll.c
ompi/dpm/: dpm.c
ompi/errhandler/: errcode.c  errhandler.c  errhandler.h  errhandler_predefined.c  errhandler_predefined.h
ompi/file/: file.c
ompi/group/: group.c  group.h  group_init.c  group_plist.c
ompi/include/: mpi.h.in  mpif-config.h.in
ompi/info/: info.c  info.h
ompi/instance/: instance.c  instance.h
ompi/mca/coll/lazy/: Makefile.am  coll_lazy.h  coll_lazy_barrier.c  coll_lazy_component.c  coll_lazy_module.c
ompi/mca/pml/: pml.h
ompi/mca/topo/: topo.h
ompi/mpi/c/: Makefile.am  cart_create_from_group.c  comm_create_errhandler.c  comm_create_from_group.c  comm_get_errhandler.c  comm_get_info.c  dist_graph_create_adjacent_from_group.c  dist_graph_create_from_group.c  errhandler_f2c.c  errhandler_free.c  file_create_errhandler.c  file_get_errhandler.c  file_get_info.c  file_open_from_group.c  graph_create_from_group.c  info_c2f.c  info_create.c  info_delete.c  info_dup.c  info_f2c.c  info_free.c  info_get.c  info_get_nkeys.c  info_get_valuelen.c  info_set.c  initialized.c  intercomm_create_from_groups.c  intercomm_merge.c  (+21 more)
ompi/op/: op.c  op.h
ompi/proc/: proc.c
ompi/request/: request.c  request.h
ompi/runtime/: mpiruntime.h  ompi_cr.c  ompi_mpi_dynamics.c  ompi_mpi_finalize.c  ompi_mpi_init.c  ompi_mpi_params.c  ompi_rte.c  params.h
ompi/win/: win.c  win.h
opal/runtime/: opal.h  opal_finalize.c  opal_init.c
(+94 files in other folders)
